[package]
name = "xylem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
anyhow = "1.0.58"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
sqlx = { version = "0.6.0", features = [ "runtime-actix-rustls", "postgres", "macros", "migrate", "chrono", "json", "uuid", "offline"] }
url = "2.2.2"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
